Add --enable-preview to tests and minor fixes
Reviewed-by: vromero